--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,13 @@
 *~
+*.pyc
 build
+source/*/com
+source/langdocs
+.externalToolBuilders/*
+npm-debug.log
 .classpath
 .project
 .settings
-*orig
-.springBeans
-*tmp/
-*backup
-*Backup
-log.xml
-nbactions.xml
-*bower_components/
-.externalToolBuilders
-*.rst-e
-*.html-e
+.DS_Store
+*rst-e
+*html-e
